Day - 25/gatekeeper/allowed-registry.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRegistry
metadata:
  name: allowed-registry
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
