Day - 25/gatekeeper/required-labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: required-labels
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
